--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
+    <h1>heading</h1>
     <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
