--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Heading</h1>
     <h3>Heading 3</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae ad atque assumenda totam explicabo. Voluptatibus perferendis maiores nesciunt totam quis explicabo unde et labore corrupti, rerum vitae nihil iure tenetur?</p>
 </body>
 </html>
